--- a/webpage/checkDetail.html
+++ b/webpage/checkDetail.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="UTF-8">
+		<title></title>
 		<meta charset="utf-8">
 		<title>Hello MUI</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
+		
 		<link rel="stylesheet" href="css/mui.min.css">
+		<link rel="stylesheet" type="text/css" href="css/app.css"/>
+		
 		<style type="text/css">
 			#list {
 				/*避免导航边框和列表背景边框重叠，看起来像两条边框似得；*/
@@ -14,26 +19,31 @@
 			}
 		</style>
 	</head>
-
+	
 	<body>
-		<div class="mui-content">
-			<ul id="list" class="mui-table-view mui-table-view-chevron">
+		<header class="mui-bar mui-bar-nav">
+			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
+			<h1 class="mui-title">detail</h1>
+		</header>
 
+		<div class="mui-content">
+		<ul id="checkDetail" class="mui-table-view">
+				 <li class="mui-table-view-cell">Item 1</li>
+		         <li class="mui-table-view-cell">Item 2</li>
+		         <li class="mui-table-view-cell">Item 3</li>
 			</ul>
 			
 		</div>
 		
+		<script src="js/mui.min.js"></script>
 		<script>
-				var table = document.body.querySelector('.mui-table-view');
-				var cells = document.body.querySelectorAll('.mui-table-view-cell');
-				for (var i = cells.length, len = i + 20; i < len; i++) {
-					var li = document.createElement('li');
-					li.className = 'mui-table-view-cell';
-					li.innerHTML = '<a class="mui-navigate-right">Item ' + (i + 1) + '</a>';
-					table.appendChild(li, table.firstChild);
-				}
-			
+			mui.init({
+				swipeBack:true 
+			});
 		</script>
+
+		
 	</body>
+	
 	
 </html>
