--- a/webpage/index.html
+++ b/webpage/index.html
@@ -30,7 +30,7 @@
 					doubletap: true
 				},
 				subpages: [{
-					id: 'list',
+//					id: 'list',
 					url: 'list.html',
 					styles: {
 						top: '45px',
@@ -42,7 +42,7 @@
       		
       	document.getElementById("checkDetail_btn").addEventListener('tap', function(e) {
 			console.log("00000");
-			//显示启动导航
+
 			mui.openWindow({
 				id: 'checkDetail',
 				url: 'checkDetail.html',
